c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/extra_credit/compound_assign_to_array.c
// An array that decays to a pointer is not an lvalue, so you can't
// assign to it with += or -=
int main(void) {
    int arr[3] = {1, 2, 3};
    arr -= 1;
    0;
}